Resolve warnings and apply suggestsions from IDEA based on Java 11
Collaterally, it also fixes a bug with NotificationDataUpdater where
LIST request didn't collect notification info in the response.